fixed the loading issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -23,5 +23,5 @@ button{
   left:30%;
   height: 100%;
   width:100%;
-  font-size: 4rem;
+  font-size: 2rem;
 }
