--- a/src/components/CountryScreen.css
+++ b/src/components/CountryScreen.css
@@ -170,6 +170,6 @@
 }
 @media screen and (max-width:500px) {
   .image-con img{
-    width:340px
+    width:320px
   }
 }
